--- a/src/Employees.Model/Employees.Model/Employees.Domain.Model.csproj
+++ b/src/Employees.Model/Employees.Model/Employees.Domain.Model.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Employees.Shared\Employees.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
