Implemented automapper with tests

--- a/src/Employees.API/appsettings.Development.json
+++ b/src/Employees.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgresConnString": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=employeestest;"
+    "PostgresConnString": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=employees;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
